Review comments updates. Remaining Args are now being passed into the commands and passed through to OperationsExecutor and XyzOperations classes.

--- a/src/ef/Properties/Resources.resx
+++ b/src/ef/Properties/Resources.resx
@@ -342,4 +342,7 @@
   <data name="MigrationsNamespaceDescription" xml:space="preserve">
     <value>Specify to override the namespace for the migration.</value>
   </data>
+  <data name="RemainingArguments" xml:space="preserve">
+    <value>Remaining arguments: '{remainingArguments}'.</value>
+  </data>
 </root>
